# flash-maxsim

./: README.md  pyproject.toml
benchmarks/: bench.py  bench_sparse.py  collect_data.py  make_figure.py
examples/: demo.py  demo_notebook.ipynb  usage.py
flash_maxsim/: __init__.py  flash_maxsim.py  flash_maxsim_quant.py  flash_maxsim_sparse.py
tests/: test_flash_maxsim.py
