[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-maxsim"
version = "0.1.0"
description = "Fused GPU kernel for ColBERT/ColPali MaxSim scoring"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = ["torch>=2.0", "triton>=2.1"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["flash_maxsim*"]
