[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-maxsim"
version = "0.1.0"
description = "Fused GPU kernel for ColBERT/ColPali MaxSim scoring"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [{name = "Roi Pony", email = "roi.pony@ibm.com"}]
keywords = ["colbert", "colpali", "maxsim", "triton", "gpu", "late-interaction", "retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.0", "triton>=3.4.0"]

[project.urls]
Homepage = "https://github.com/roipony/flash-maxsim"
Repository = "https://github.com/roipony/flash-maxsim"

[project.optional-dependencies]
dev = ["pytest"]
notebook = ["pylate==1.3.4", "sentence-transformers", "jupyter", "matplotlib"]

[tool.setuptools.packages.find]
include = ["flash_maxsim*"]
